--- a/_includes/swc/syllabus.html
+++ b/_includes/swc/syllabus.html
@@ -24,22 +24,25 @@
       <li>Using Python from the Command Line</li>
 -->
 	<li>Running and quitting</li>
-	<li>Variables and assignment</li>
-	<li>Data types and conversion</li>
+	<li>Variables, lists, tuples, data types </li>
+	    <li>Functions</li>
 	<li>Built-in functions and help</li>
-      <li>Libraries</li>
-	<li>Reading tabular data into dataframes using Pandas</li>
-	<li>Pandas dataframes</li>
-      <li>Plotting</li>
-	<li>Lists</li>
-      <li>For Loops </li>
-	<li> Conditionals</li>
-	<li>Looping over data sets</li>
-	<li>Writing functions</li>
-      <li>Variable scope</li>
-	<li>Programming style</li>
-	<li>Wrap-up</li>
-      <li><a href="{{site.swc_pages}}/python-novice-gapminder/reference">Reference...</a></li>
+      <li>Libraries: Numpy and Matplotlib</li>
+	    <li> Finite difference method with numpy </li>
+	    <li> Loops </li>
+	    <li>Libraries: Scipy </li>
+	    <li> Solving a boundary value problem using SciPy </li>
+	    <li> Numerical quadrature, curve fitting, and root finding with Scipy </li>
+	    <li> Libraries: Pandas </li>
+	    <li>Reading tabular data into dataframes using Pandas</li>
+	    <li>Pandas datatypes: object, float, and datetime </li>
+	    <li>Appending and merging dataframes</li>
+	    <li>Sorting and interpolating a dataframe</li>
+	    <li>Pandas - data visualization</li>
+	    <li>Pandas - groupby</li>
+	    <li> Loops and conditionals: looping over data sets</li>
+	    <li>Wrap-up</li>
+      <li><a href="https://github.com/arvindnswamy/IntroToPythonForMEstudents">Reference...</a></li>
     </ul>
   </div>
   <!--
